# flask_playground

./: .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.devcontainer/: compose.yaml  devcontainer.json  install-pkg.sh
src/: config.ini  run.py
src/app/: __init__.py  application.py
src/app/database/: __init__.py  database.py
src/app/database/models/: AltUser.py  User.py  __init__.py
src/app/tools/: __init__.py  hello_world.py
src/app/tools/services/: __init__.py  hello_world_service.py
src/migrations/versions/: b183b7ad2e93_.py  c89e7fb0b588_.py
