[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "RyosukeDTomita", email = "d310151c2@gmail.com" }
]
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "flask-iniconfig>=0.1.0",
    "flask-migrate>=4.1.0",
    "cryptography>=44.0.1",
    "flask-sqlalchemy>=3.1.1",
    "pymysql>=1.1.1",
]
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
